@@ -107,6 +107,8 @@
     - Added MM_NW5_VERSION, MM_Unix_VERSION, MM_Win32_VERSION, 
       MM_VMS_VERSION.
     - Eliminated duplicate code in constants() overrides
+    - Added all_target() for easier customization of what's run by default
+    - Eliminated duplicate top_targets() overrides
 
 6.05 Tue Aug 27 16:09:51 PDT 2002
     - Output format of the hint file verbose diagnostic is now in
